@@ -136,6 +136,7 @@ Collection of variables used for setting the language that will be used on the A
       <globalSetting name="CurrencyCodesv-SE" value="SEK" />
 	    <globalSetting name="CurrencyCodeen-US" value="USD" />
       <globalSetting name="AllowOwnDomain" value="true" />
+      <globalSetting name="SkipIndexPage" value="false" />
 	  <!--<globalSetting name="AllowAddSubdomain" value="example.com" />-->
     </globalSettingsList>
     <webFramePlugins path="bin\Plugins" />
