@@ -1,4 +1,7 @@
 Atomia Public Order Page v13.6
+2013-06-20 Goran Manojlovic <goran@atomia.com>
+	- [IMPROVEMENT] Added support for skipping Index page.
+	
 2013-06-14 Daniel Persson <daniel.persson@atomia.com>
 	- [IMPROVEMENT] Refill order form on going back when appropriate, e.g. on canceled payment.
 	- [IMPROVEMENT] Save absolute cancel URL for WorldPayXml to transaction.
